--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,12 @@
 pluginManagement {
     repositories {
+        ivy {
+            url "$System.env.HOME/.ivy2/local" // Указываем путь к Ivy-репозиторию
+            layout 'pattern', {
+                artifact '[organisation]/[module]/[revision]/[type]s/[artifact].[ext]'
+                ivy '[organisation]/[module]/[revision]/ivys/ivy.xml'
+            }
+        }
         gradlePluginPortal()
         mavenCentral()
         maven {
