--- a/build.gradle
+++ b/build.gradle
@@ -131,3 +131,11 @@ tasks.withType(Test) {
     }
     systemProperty 'testReportDir', "$buildDir/test-report"
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'com.example') {
+            details.useTarget group: 'com.example', name: 'my-library_2.13', version: '1.0.0'
+        }
+    }
+}
