--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,14 @@
 pluginManagement {
     repositories {
         ivy {
-            url "$System.env.HOME/.ivy2/local" // Укажите путь к локальному Ivy-репозиторию
+            url "$System.env.HOME/.ivy2/local"
             patternLayout {
                 artifact "[organisation]/[module]_[classifier]/[revision]/jars/[artifact]_[classifier]-[revision].[ext]"
                 ivy "[organisation]/[module]_[classifier]/[revision]/ivys/ivy.xml"
             }
             metadataSources {
-                ivyDescriptor() // Указывает Gradle использовать ivy.xml для метаданных
-                artifact()      // Подключает поиск артефактов
+                ivyDescriptor()
+                artifact()
             }
         }
         gradlePluginPortal()
