--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,9 @@ pluginManagement {
             url "$System.env.HOME/.ivy2/local"
             patternLayout {
                 artifact "[organisation]/[module]_[classifier]/[revision]/jars/[artifact]_[classifier]-[revision].[ext]"
+//                ~/.ivy2/local/com/example/my-library_2.13/1.0.0/jars/my-library_2.13.jar
                 ivy "[organisation]/[module]_[classifier]/[revision]/ivys/ivy.xml"
+//                ~/.ivy2/local/com/example/my-library_2.13/1.0.0/ivys/ivy.xml
             }
             metadataSources {
                 ivyDescriptor()
